# rocFFT

./: .gitignore  .nojekyll  CMakeLists.txt  Jenkinsfile  Jenkinsfile-  README.md  api_design.md  index.html  install.sh  rocfft_transpose_doc.md
clients/: CMakeLists.txt
clients/benchmarks/: CMakeLists.txt
clients/cmake/: FindFFTW.cmake  build-options.cmake  external-boost.cmake  external-gtest.cmake
clients/rider/: CMakeLists.txt  misc.cpp  misc.h  rider.cpp  rider.h
clients/samples/: CMakeLists.txt
clients/samples/fixed-16/: CMakeLists.txt  fixed-16-double.cpp  fixed-16-float.cpp  fixed-16.cpp
clients/samples/fixed-16-hip/: CMakeLists.txt  fixed-16.cpp
clients/samples/fixed-large/: CMakeLists.txt  fixed-large-double.cpp  fixed-large-float.cpp  fixed-large.cpp
clients/samples/transpose_outplace_1024/: CMakeLists.txt  transpose_outplace_1024.cpp
clients/samples/transpose_outplace_complex/: .transpose_outplace_complex.cpp.swp  CMakeLists.txt  transpose_outplace_complex.cpp
clients/selftest/: CMakeLists.txt  basis_vector.h  test_complex.cpp
clients/tests/: CMakeLists.txt  accuracy_test_1D.cpp  accuracy_test_2D.cpp  accuracy_test_common.h  accuracy_test_pow2.cpp  accuracy_test_powX.cpp  accuracy_test_transpose.cpp  buffer.h  buffer_memory.h  fftw_transform.h  gtest_main.cpp  main.cpp  rocfft_against_fftw.h  rocfft_transform.h  template.cpp  test_constants.h  testing_transpose.hpp  transpose_gtest.cpp  unit_test.cpp
clients/tests/misc/include/: test_exception.h
clients/tests/misc/source/: test_exception.cpp
cmake/: CMakeLists.txt  build-bitness.cmake  clang-toolchain.cmake  external-hip.cmake  gcc-toolchain.cmake  hcc-toolchain.cmake  hipcc-toolchain.cmake.in
docker/: dockerfile-build-hip-hcc-ctu-ubuntu-16.04  dockerfile-build-nvidia-cuda  dockerfile-build-rocm-terminal  dockerfile-install-hip-hcc-ctu-ubuntu-16.04  dockerfile-install-rocm-terminal
docs/: Doxyfile  run_doc.sh  run_doxygen.sh
docs/source/: api.rst  conf.py  index.rst  library.rst
html/: .buildinfo  allapi.html  api.html  genindex.html  index.html  library.html  objects.inv  real.html  search.html  searchindex.js
html/_sources/: library.rst.txt
src/: CMakeLists.txt
src/client/: client.cpp
src/cmake/: build-options.cmake
src/include/: hipfft.h  rocfft-version.h.in  rocfft.h  rocfft_transpose.h  unicode.compatibility.h
temp/: butterfly.h  fft_pow2_hip.h  fft_pow2_hip_entry.h  fft_pow2_ip_entry_hip.h  fft_pow2_large_entry_hip.h  fft_pow2_large_hip.h  fft_pow2_large_hip_entry.h  fft_pow2_op_entry_hip.h  run.sh  try_16.cpp  try_16_v2.cpp  try_2048.cpp  try_pow2.cpp  try_pow2_2d.cpp  twiddles_4096.h  twiddles_pow2.h  twiddles_pow2_large.h
temp/GenericRad4/: GenericRad4.sln  GenericRad4.vcxproj  butterfly.cl  code_chunks.txt  common.h  complex2complex.cpp  fft_generic.cl  fft_generic_4096.cl  fft_generic_up1.cl  fft_static.cl  fft_static_large.cl  fileread.cpp  twiddles_pow2.cl  twiddles_pow2_large.cl
utils/simple_bench/: kernel_launch.h  launch.cpp  main.cpp  twiddles.cpp  twiddles.h
utils/simple_bench/kernels/: butterfly.h  common.h  pow2.h  pow2_ip_entry.h  pow2_large.h  pow2_large_entry.h  pow2_op_entry.h
